--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,19 @@
 :root {
   --very-light-blue: #97BEF4;
   --light-white: #F6F8FB;
+  --cream: #F6F1F1;
+  --green: #219653;
 }
 
+/* general styles  */
 body {
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
 }
 
 .card {
-  width: 40%;
-  min-width: 350px;
+  width: 500px;
+  margin: auto;
 }
 
 .card h1 {
@@ -26,6 +29,7 @@ body {
   margin: 0;
 }
 
+/* uploader  */
 figure {
   border: 1px solid var(--very-light-blue);
   background: var(--light-white);
@@ -33,26 +37,67 @@ figure {
   cursor: grab;
 }
 
-/* progress  */
-.progress {
-  height: 5px;
-  width: 300px;
-  border-radius: 5px;
-  overflow: hidden;
+/* progress bar  */
+.bar-wrapper svg {
+  width: 18.75rem;
+  height: 6.25rem;
 }
 
-.progress-bar {
-  top: 0;
-  left: 0;
-  bottom: 0;
+
+/* uploaded image  */
+/* check icon  */
+.order-1 {
+  background-color: var(--green);
+  border-radius: 50%;
+  display: flex;
+
+  padding: 1rem 1.2rem;
+  color: #fff;
+}
+
+/* close icon  */
+.position-absolute {
+  top: 0.5rem;
+  right: 1rem;
+
+  box-shadow: 0 0 10px var(--light-white);
+  cursor: pointer;
+}
+
+.position-absolute i {
   transition: all 0.3s linear;
 }
 
+.position-absolute:hover i {
+  opacity: 0.9;
+}
+
+/* uploaded image view  */
+.uploaded-img-holder {
+  width: 20rem;
+  height: 15rem;
+}
+
+.uploaded-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 3rem;
+}
+
+/* link text  */
 .link-text {
   width: 80%;
-  overflow-x: visible;
+  white-space: nowrap;
+  overflow-x: auto;
+  padding: 0.5rem;
 }
 
 .link-text::-webkit-scrollbar {
-  display: none;
+  height: 7px;
+  background: var(--cream);
+}
+
+.link-text::-webkit-scrollbar-thumb {
+  background: var(--very-light-blue);
 }
